k8s/lb/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb-service
  namespace: demo-istio-lb
spec:
  selector:
    app: nginx-lb
  ports:
  - name: http
    port: 8080
    targetPort: 80
    protocol: TCP
