k8s/lb/nginx-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-lb-gateway
  namespace: demo-istio
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - hosts:
    - lab.k8s.io
    port:
      name: http
      number: 80
      protocol: HTTP
