k8s/lb/nginx-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-lb-destination-rule
  namespace: demo-istio
spec:
  host: nginx-lb-service.demo-istio.svc.cluster.local
  trafficPolicy:
    loadbalancer:
      simple: ROUND_ROBIN
  subsets:
    - name: V1
      labels:
        version: A
      trafficPolicy:
        loadbalancer:
          simple: LEAST_CONN
    - name: V2    
      labels:
        version: B
